# examples/cacti-example-cbdc-backend/src/main/typescript/partner/services/controller-client.ts
@@ -20,6 +20,7 @@ export interface InitiateTxPayload {
 
 export interface InitiateTxResponse {
   transactionId: string;
+  destinationAmount?: number;
   status?: string;
 }
 
